[metadata]
name = lacrosse_view
version = 1.0.3
author = IceBotYT
author_email = icebotyt@outlook.com
description = Client for retrieving data from the La Crosse View cloud
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceBotYT/lacrosse_view
project_urls =
    Bug Tracker = https://github.com/IceBotYT/lacrosse_view/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp>=3.8.1
    pydantic>=1.9.0,<3.0.0
    aiozoneinfo>=0.2.1

[options.packages.find]
where = src

[options.package_data]
lacrosse_view =
    *.typed